--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -95,7 +95,7 @@
   height: 18px;
   width: 18px;
   text-align: center;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid white;
   border-radius: 50%;
   background-color: $gray-medium;
   a {
@@ -121,36 +121,6 @@
 .border-between > [class*='col-']:first-child:before,
 .border-between > [class*='col-']:last-child:after {
     display: none;
-}
-.requests {
-  position: relative;
-  background-color: white;
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  border-radius: 3px;
-  padding: 10px;
-  min-height: 130px;
-  margin-bottom: 15px;
-}
-.request-head {
-  display: flex;
-  align-items: center;
-}
-.request-head img {
-  flex: 0 0 20%;
-  width: 60px;
-}
-.request-header-info {
-  flex: 0 0 80%;
-  text-align: left;
-  margin-left: 10px;
-  p {
-    margin-bottom: 0;
-    font-size: 13px;
-  }
-}
-.request-dr-name {
-  color: $blue;
-  font-weight: bold;
 }
 .btn-calendar {
   font-size: 13px;
