--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -11,10 +11,12 @@
     margin: 0px;
   }
 }
-.accepted-booking-card {
-  margin: 0px 10px 10px 10px;
+.booking-card {
+  position: relative;
+  margin: 0px 25px 10px 10px;
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2), 0 1px 0 0 rgba(0,0,0,0.1);
-  border-radius: 5px;
+  border-radius: 3px;
+  min-height: 130px;
   .fa-check {
     color: $green;
   }
@@ -32,8 +34,8 @@
 .booking-card-header {
   background-color: $blue;
   color: white;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -53,6 +55,9 @@
   display: flex;
   align-items: center;
 }
+
+// Bookings
+
 .inner-card {
   flex: 0 1 45%;
 }
@@ -106,4 +111,38 @@
   .wrapper-dashboard {
     padding-left: 0px !important;
   }
+}
+
+// Incoming & outgoing requests
+
+.inner-card-request {
+  flex: 0 1 25%;
+}
+.card-split-request {
+  flex: 0 0 1%;
+  min-height: 100px;
+}
+.request-head {
+  display: flex;
+  align-items: center;
+}
+.request-head img {
+  flex: 0 0 20%;
+  width: 60px;
+}
+.request-header-info {
+  flex: 0 0 80%;
+  text-align: left;
+  margin-left: 10px;
+  p {
+    margin-bottom: 0;
+    font-size: 13px;
+  }
+}
+.request-dr-name {
+  color: $blue;
+  font-weight: bold;
+}
+.request-contact a {
+  color: $blue;
 }
