--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
           </form>
       </div>
 
-      <%= link_to accepted_bookings_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+      <%= link_to received_requests_path, class: "navbar-wagon-item navbar-wagon-link" do %>
         <div class="badge-container">
           <i class="fa fa-users"></i>
           <% if current_user %>
