--- a/app/views/bookings/index_accepted_bookings.html.erb
+++ b/app/views/bookings/index_accepted_bookings.html.erb
@@ -9,12 +9,12 @@
     <div class="booking-card">
 
       <div class="booking-card-header light-padding">
-        <i class="fa fa-user-md"></i><span class="flex-item"> Remplacement du <strong><%= l(booking.start_date, format: "%e %B %Y") %></strong> au <strong><%= l(booking.end_date, format: "%e %B %Y") %></strong> - Reversement au remplaçant : <strong><%= booking.commission %>%</strong></span><i class="fa fa-envelope flex-item"></i>
+        <i class="fa fa-user-md"></i><span class="flex-item"> Remplacement du <strong><%= l(booking.start_date, format: "%e %B %Y") %></strong> au <strong><%= l(booking.end_date, format: "%e %B %Y") %></strong></span>
       </div>
 
       <div class="accepted-booking-card-content">
-        <div class="inner-card">
-          <div class="inner-card-header text-center light-padding">
+
+          <div class="inner-card-picture text-center light-padding">
             <% if practice_user.avatar.nil? %>
               <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
             <% else %>
@@ -23,22 +23,22 @@
             <p><%= practice_user.first_name %> <strong><%= practice_user.last_name %></strong></p>
             <p><em><%= practice_user.has_practice ? "Remplacé(e)" : "Remplaçant" %></em></p>
           </div>
-          <div class="inner-card-info light-padding hidden-xs">
+          <div class="inner-card light-padding hidden-xs" style="flex: 0 1 31%;">
             <ul class="fa-ul">
               <% if practice_user.validated %>
-                <li><i class="fa fa-check fa-fw"></i> Identité vérifiée par RemplaMatch</li>
+                <li><i class="fa fa-check-square fa-fw"></i> Identité vérifiée par RemplaMatch</li>
               <% else %>
                 <li><i class="fa fa-times fa-fw"></i> Identité non-vérifiée par RemplaMatch</li>
               <% end %>
             </ul>
           </div>
-        </div>
-        <div class="card-split" style="border-right: 1px solid #eee;"></div>
-        <div class="card-split">
+
+          <div class="card-split hidden-xs" style="border-right: 1px solid #eee;"></div>
+          <div class="card-split hidden-xs">
           <%#= image_tag "replacement_icon_green.png", style: "width: 40px; position: relative; left: -20px; background-color: white;" %>
-        </div>
-        <div class="inner-card">
-          <div class="inner-card-header text-center light-padding">
+          </div>
+
+          <div class="inner-card-picture text-center light-padding">
             <% if locum_user.avatar.nil? %>
               <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
             <% else %>
@@ -47,22 +47,26 @@
             <p><%= locum_user.first_name %> <strong><%= locum_user.last_name %></strong></p>
             <p><em><%= locum_user.has_practice ? "Remplacé(e)" : "Remplaçant" %></em></p>
           </div>
-          <div class="inner-card-info light-padding hidden-xs">
+          <div class="inner-card light-padding hidden-xs" style="flex: 0 1 31%;">
             <ul class="fa-ul">
-              <li><i class="fa fa-check fa-fw"></i> Attestation d'inscription à l'Ordre ou licence de remplacement<i class="fa fa-fw fa-file"></i></li>
-              <li><i class="fa fa-times fa-fw"></i> Attestation d'assurance Responsabilité Civile Professionnelle<i class="fa fa-fw fa-file"></i></li>
-              <% if practice_user.validated %>
-                <li><i class="fa fa-check fa-fw"></i> Identité vérifiée par RemplaMatch</li>
+              <% if locum_user.student %>
+                <li><i class="fa fa-check-square fa-fw"></i> Licence de remplacement<i class="fa fa-fw fa-file"></i></li>
               <% else %>
-                <li><i class="fa fa-times fa-fw"></i> Identité non-vérifiée par RemplaMatch</li>
+                <li><i class="fa fa-check-square fa-fw"></i> Inscription à l'Ordre<i class="fa fa-fw fa-file"></i></li>
+              <% end %>
+              <li><i class="fa fa-times fa-fw"></i> Assurance RCP<i class="fa fa-fw fa-file"></i></li>
+              <% if practice_user.validated %>
+                <li><i class="fa fa-check-square fa-fw"></i> Identité vérifiée</li>
+              <% else %>
+                <li><i class="fa fa-times fa-fw"></i> Identité non-vérifiée</li>
               <% end %>
             </ul>
           </div>
-        </div>
+
       </div>
       <hr>
-      <div class="booking-card-pre-footer light-padding">
-        <!-- <p><i class="fa fa-check fa-fw"></i> Contrat signé</p> -->
+      <div class="booking-card-pre-footer text-center light-padding">
+        <!-- <p><i class="fa fa-check-square fa-fw"></i> Contrat signé</p> -->
 
         <% if Contract.where(booking: booking).size == 0 %>
           <%= simple_form_for([booking, @contract]) do |f| %>
@@ -75,7 +79,7 @@
           <% end %>
         <% else %>
           <%= link_to booking_contract_path(booking, Contract.where(booking: booking).first, format: :pdf), target: "_blank" do %>
-            <span><%= image_tag "contract_icon_green.png", style: "width: 30px; margin: 2px 10px;" %></span><span> Contrat de remplacement</span>
+            <span><%= image_tag "contract_icon_green.png", style: "width: 20px; margin: 2px 5px;" %></span><span> Contrat de remplacement</span>
           <% end %>
         <% end %>
 
